app/pinax-account-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinax-account-api
spec:
  selector:
    matchLabels:
      app: pinax-account-api
  replicas: 3
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: pinax-account-api
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: pinax-account-api
          image: ghcr.io/pinax-network/pinax-account-api:8872e80
          args:
            - "-config"
            - "/config/config.yaml"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: pinax-account-api-config
