app/pinax-account-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinax-account-api
spec:
  type: ClusterIP
  selector:
    app: pinax-account-api
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
