app/pinax-account-api/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: pinax-cloud-backend
  name: pinax-account-api
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/pinax-account-api`)
      kind: Rule
      services:
        - name: pinax-account-api
          port: 8080
